force-app/main/default/objects/hed__Relationship_Auto_Create__c/hed__Relationship_Auto_Create__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Automatically generates a Relationship between a Contact and another Contact or a Contact and a Contact/Campaign Member based on a custom lookup field.</description>
    <label>Autocréation de relation</label>
</CustomObject>