force-app/main/default/objects/hed__Relationship_Auto_Create__c/fields/hed__Campaign_Types__c.field-meta.xml
<CustomField>
    <fullName>hed__Campaign_Types__c</fullName>
    <description>For Auto-Create Relationships based on Campaign Members, the list of Campaign types the automation applies to. This field will be blank for Auto-Create Relationships based on Contacts.</description>
    <inlineHelpText>Pour des relations automatiquement créées basées sur les membres de campagne, la liste des types de campagne auxquels l&apos;automatisation s&apos;applique. Ce champ est vide pour des relations automatiquement créées basées sur des contacts.</inlineHelpText>
    <label>Campaign Types</label>
    <type>TextArea</type>
</CustomField>