force-app/main/default/objects/hed__Relationship_Auto_Create__c/fields/hed__Field__c.field-meta.xml
<CustomField>
    <fullName>hed__Field__c</fullName>
    <description>The label of the lookup field that triggers the creation of this Relationship when the field value is updated.</description>
    <inlineHelpText>L&apos;étiquette du champ de référence qui déclenche la création de cette relation lorsque la valeur de champ est mise à jour.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>