force-app/main/default/objects/hed__Relationship_Auto_Create__c/fields/hed__Object__c.field-meta.xml
<CustomField>
    <fullName>hed__Object__c</fullName>
    <description>The API name of the object (either Contact or CampaignMember) that the custom lookup field is on.</description>
    <inlineHelpText>Le nom d&apos;API de l&apos;objet (Contact ou CampaignMember) dans lequel le champ de référence se situe.</inlineHelpText>
    <label>Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>