force-app/main/default/objects/hed__Relationship_Auto_Create__c/fields/hed__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Relationship_Type__c</fullName>
    <description>The Relationship type (referer, family, etc.) to be created between the base object defined in the Object field, and the lookup object.</description>
    <inlineHelpText>Le type de relation (référent, famille, etc.) à créer entre l&apos;objet de base défini dans le champ Objet et l&apos;objet de référence.</inlineHelpText>
    <label>Relationship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>